# publication-API

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/source/: dep_pubs.rst  modules.rst  publication-api.rst  publication-api.utils.rst  publications.rst  writers.rst
publication-api/: config.py  dep_pubs.py  elements.py  publications.py  requirements.txt  script.py  writers.py
publication-api/utils/: oai_search.py
