[metadata]
# replace with your username:
name = publication-api
version = 1.0
author = Alessandro Zinni
author_email = alessandro.zinni98@gmail.com
description = This is a package for publication import from institutional repository: https://air.uniud.it/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zinni98/publication-API

[options]
packages = find:
python_requires = >=3.7

[flake8]
max-line-length = 85
ignore = E722, W503 # allow general Exception